--- a/css/pase-de-liga-estilos.css
+++ b/css/pase-de-liga-estilos.css
@@ -693,12 +693,14 @@
 }
 .tienesElControl .tienesElControl__cards-contenedor {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(312px, 400px));
-  grid-template-rows: 312px;
+  height: 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(312px, 1fr));
+  grid-template-rows: auto;
   justify-items: center;
+  justify-content: center;
   border-radius: 10px;
   background-color: #F88D2A;
-  padding: 0;
+  padding: 80px 40px;
 }
 .tienesElControl .tienesElControl__cards-contenedor .cards-contenedor__cards {
   padding: 0px;
@@ -708,6 +710,7 @@
   grid-template-columns: 100%;
   grid-template-rows: 246px 70px;
   justify-items: center;
+  padding-top: 40px;
 }
 .tienesElControl .tienesElControl__cards-contenedor .cards-contenedor__cards .cards__contenido .cards__img img {
   height: 100%;
