--- a/css/juegos-estilos.css
+++ b/css/juegos-estilos.css
@@ -442,6 +442,104 @@
   text-transform: uppercase;
 }
 
+@media screen and (max-width: 1440px) {
+  .card-partidos {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    padding: 0 10%;
+  }
+  .card-partidos .card-partidos__contenedor {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 80% 20%;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    padding: 40px 40px 40px 40px;
+  }
+  .card-partidos .card-partidos__contenedor .card-partidos__contenedor__equipos {
+    display: grid;
+    grid-template-columns: 40% 20% 40%;
+    padding-bottom: 10px;
+    justify-content: center;
+  }
+  .card-partidos .card-partidos__contenedor .card-partidos__contenedor__equipos .equipo-col-izq {
+    display: grid;
+    grid-template-columns: 3fr;
+    justify-items: center;
+  }
+  .card-partidos .card-partidos__contenedor .card-partidos__contenedor__equipos .equipo-col-izq .equipo-cards-img {
+    height: 100px;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+  }
+  .card-partidos .card-partidos__contenedor .card-partidos__contenedor__equipos .equipo-col-izq img {
+    height: 84px;
+  }
+  .card-partidos .card-partidos__contenedor .card-partidos__contenedor__equipos .equipo-col-izq h3 {
+    margin-bottom: 10px;
+    text-align: center;
+    text-transform: uppercase;
+  }
+  .card-partidos .card-partidos__contenedor .card-partidos__contenedor__equipos .equipo-col-izq p {
+    font-size: 1.8rem;
+    font-weight: 300;
+    font-family: "Bai Jamjuree", sans-serif;
+    text-align: center;
+    color: black;
+  }
+  .card-partidos .card-partidos__contenedor .card-partidos__contenedor__equipos .equipo-col-centro p {
+    margin-top: 60px;
+    font-size: 2.4rem;
+    font-weight: 700;
+    font-family: "Bai Jamjuree", sans-serif;
+    text-align: center;
+    padding: 10px;
+  }
+  .card-partidos .card-partidos__contenedor .card-partidos__contenedor__equipos .equipo-col-der {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-columns: 3fr;
+    justify-content: center;
+  }
+  .card-partidos .card-partidos__contenedor .card-partidos__contenedor__equipos .equipo-col-der .equipo-cards-img {
+    height: 100px;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+  }
+  .card-partidos .card-partidos__contenedor .card-partidos__contenedor__equipos .equipo-col-der img {
+    height: 84px;
+  }
+  .card-partidos .card-partidos__contenedor .card-partidos__contenedor__equipos .equipo-col-der h3 {
+    margin-bottom: 10px;
+    text-align: center;
+    text-transform: uppercase;
+  }
+  .card-partidos .card-partidos__contenedor .card-partidos__contenedor__equipos .equipo-col-der p {
+    font-size: 1.8rem;
+    font-weight: 300;
+    font-family: "Bai Jamjuree", sans-serif;
+    text-align: center;
+  }
+  .card-partidos .card-partidos__contenedor .card-partidos__contenedor__barraInferior {
+    display: flex;
+    justify-content: space-between;
+    border-top: solid #E3E3E3 1px;
+    padding: 20px 0 20px 0;
+  }
+  .card-partidos .card-partidos__contenedor .card-partidos__contenedor__barraInferior a {
+    text-decoration: none;
+    font-size: 1.6rem;
+    font-weight: 700;
+    font-family: "Mukta", sans-serif;
+    color: black;
+    text-transform: uppercase;
+  }
+}
 @media screen and (max-width: 500px) {
   .card-partidos {
     padding: 0 10%;
