--- a/scss/_equipos-aside.scss
+++ b/scss/_equipos-aside.scss
@@ -27,7 +27,7 @@
 
                 a{ 
                     font-family: $fuente2;
-                    font-size: 2.4rem;
+                    font-size: 2rem;
                     font-weight: 700;
                     text-decoration: none;
                     color: black;
@@ -36,7 +36,7 @@
                 
 
                 i{
-                    font-size: 2.4rem;
+                    font-size: 2rem;
                 }
             }
 
@@ -86,6 +86,62 @@
             }
         }
     }
+}
+
+@media screen and (max-width: 1440px){
+
+    .equipo-contenedor{
+    
+        .equipo-contenedor-top{
+       
+    
+            .equipo__aside{
+               
+            
+                .equipo__aside__boton-conferencia{
+                    a{              
+                        font-size: 1.8rem;
+                    }
+                
+                    i{
+                        font-size: 1.8rem;
+                    }
+                }
+    
+    
+    
+                .equipo__aside__conferencia-oeste__Contenedor{
+                    .equipo__aside__conferencia-oeste__equipos{
+                        grid-template-columns: 15% 30% 45%;
+         
+    
+                        .conferencia-oeste-equipos__posicion{
+                            font-family: $fuente1;
+                            font-size: 2rem;
+                            font-weight: 700;
+                        }
+                        
+                            img{
+                                
+                                width: 60px;
+                                margin: 18px 0;
+    
+                            }
+                        
+                        .conferencia-oeste-equipos__nombre{
+                            font-family: $fuente1;
+                            font-size: 1.6rem;
+                            font-weight: 700;
+                            padding-left: 10px;
+    
+                        }
+    
+                    }
+                }
+            }
+        }
+    }
+
 }
 
 
